--- a/.forms.yml
+++ b/.forms.yml
@@ -50,7 +50,7 @@ use_cases:
           key: terraform_version
           widget: simple_text
           type: string
-          default: "1.6.4"
+          default: "1.8.2"
 
 - name: aws_eks
   sections:
@@ -66,7 +66,7 @@ use_cases:
         key: module.eks.cluster_version
         widget: simple_text
         type: string
-        default: "1.28"
+        default: "1.29"
 
     - name: VPC
       technologies: [pipeline]
@@ -81,6 +81,12 @@ use_cases:
     - name: Node-pipeline
       technologies: [pipeline]
       vars:
+      - name: "Kubectl version"
+        description: "Kubectl version."
+        key: kubectl_version
+        widget: simple_text
+        type: string
+        default: "1.29.2"
       - name: "EKS Node type"
         description: "Type of Aws EC2 instance for nodes. (Should change on **prod**)"
         key: node_instance_type
