--- a/pipeline/pipeline.yml
+++ b/pipeline/pipeline.yml
@@ -27,9 +27,9 @@ groups:
   - kubernetes-configs
   - access
 
-- name: workaround
-  jobs:
-  - kubernetes-vpccni-workaround
+# - name: workaround
+#   jobs:
+#   - kubernetes-vpccni-workaround
 
 - name: destroy
   jobs:
@@ -204,7 +204,7 @@ jobs:
               DIR=${PWD}
 
               export AWS_DEFAULT_REGION="$(jq -r .aws_region tfstate/metadata)"
-              pip3 install awscli
+              pip3 install awscli --break-system-packages
 
               ASG_NAMES=$(aws autoscaling describe-auto-scaling-groups  --query 'AutoScalingGroups[?contains(Tags[?Key==`eks:cluster-name`].Value, `'${CLUSTER_NAME}'`)].[AutoScalingGroupName]' | jq -r .[][])
               for ASG_NAME in ${ASG_NAMES}; do
@@ -245,10 +245,10 @@ jobs:
               DIR=${PWD}
 
               export AWS_DEFAULT_REGION="$(jq -r .aws_region tfstate/metadata)"
-              pip3 install awscli
+              pip3 install awscli --break-system-packages
               aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig  --name ${CLUSTER_NAME}
 
-              kubectl set env daemonset aws-node -n kube-system ENABLE_PREFIX_DELEGATION=true
+              # kubectl set env daemonset aws-node -n kube-system ENABLE_PREFIX_DELEGATION=true
 
               # enable annotation used to monitor pod from this NS
               kubectl annotate namespace kube-system prometheus/monitoring="false" --overwrite
@@ -262,58 +262,58 @@ jobs:
             AWS_ACCESS_KEY_ID: ((aws_access_key))
             AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
 
-- name: kubernetes-vpccni-workaround
-  serial: True
-  max_in_flight: 1
-  build_logs_to_retain: 10
-  plan:
-    - do:
-      - get: tfstate
-        trigger: false
-        passed:
-          - kubernetes-configs
-
-      - get: pipeline-first-trigger
-        trigger: true
-
-      - task: exec-cmd
-        config:
-          platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              repository: alpine/k8s
-              tag: ((kubectl_version))
-          run:
-            path: /bin/bash
-            args:
-            - -ec
-            - |
-              DIR=${PWD}
-
-              export AWS_DEFAULT_REGION="$(jq -r .aws_region tfstate/metadata)"
-              pip3 install awscli
-              aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig  --name ${CLUSTER_NAME}
-
-              # VPC CNI is installed by aws_eks_addon. The issue is we can't congifure ENABLE_PREFIX_DELEGATION on addon
-              # https://github.com/aws/amazon-vpc-cni-k8s/issues/1571#issuecomment-895446721
-              # https://github.com/aws/containers-roadmap/issues/1333
-              # Helm release could be used but we would avoid managing it.
-              # So here is a woraround until we can set ENABLE_PREFIX_DELEGATION on addon
-              # Delete all pods created before ENABLE_PREFIX_DELEGATION defined
-              for line in $(kubectl get pod -A -o json 2> /dev/null | jq -r '.items[].metadata | "\(.namespace)/\(.name)"');do
-                pod=${line#*/}
-                ns=${line%/*}
-                echo "Delete POD: $ns / $pod"
-                kubectl -n $ns delete pod $pod
-              done
-
-          inputs:
-          - name: tfstate
-          params:
-            CLUSTER_NAME: ((project))-((env))
-            AWS_ACCESS_KEY_ID: ((aws_access_key))
-            AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
+# - name: kubernetes-vpccni-workaround
+#   serial: True
+#   max_in_flight: 1
+#   build_logs_to_retain: 10
+#   plan:
+#     - do:
+#       - get: tfstate
+#         trigger: false
+#         passed:
+#           - kubernetes-configs
+#
+#       - get: pipeline-first-trigger
+#         trigger: true
+#
+#       - task: exec-cmd
+#         config:
+#           platform: linux
+#           image_resource:
+#             type: registry-image
+#             source:
+#               repository: alpine/k8s
+#               tag: ((kubectl_version))
+#           run:
+#             path: /bin/bash
+#             args:
+#             - -ec
+#             - |
+#               DIR=${PWD}
+#
+#               export AWS_DEFAULT_REGION="$(jq -r .aws_region tfstate/metadata)"
+#               pip3 install awscli --break-system-packages
+#               aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig  --name ${CLUSTER_NAME}
+#
+#               # VPC CNI is installed by aws_eks_addon. The issue is we can't congifure ENABLE_PREFIX_DELEGATION on addon
+#               # https://github.com/aws/amazon-vpc-cni-k8s/issues/1571#issuecomment-895446721
+#               # https://github.com/aws/containers-roadmap/issues/1333
+#               # Helm release could be used but we would avoid managing it.
+#               # So here is a woraround until we can set ENABLE_PREFIX_DELEGATION on addon
+#               # Delete all pods created before ENABLE_PREFIX_DELEGATION defined
+#               for line in $(kubectl get pod -A -o json 2> /dev/null | jq -r '.items[].metadata | "\(.namespace)/\(.name)"');do
+#                 pod=${line#*/}
+#                 ns=${line%/*}
+#                 echo "Delete POD: $ns / $pod"
+#                 kubectl -n $ns delete pod $pod
+#               done
+#
+#           inputs:
+#           - name: tfstate
+#           params:
+#             CLUSTER_NAME: ((project))-((env))
+#             AWS_ACCESS_KEY_ID: ((aws_access_key))
+#             AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
 
 # manage/display access
 - name: access
@@ -419,7 +419,7 @@ jobs:
                 DIR=${PWD}
 
                 export AWS_DEFAULT_REGION="$(jq -r .aws_region tfstate/metadata)"
-                pip3 install awscli
+                pip3 install awscli --break-system-packages
                 aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig  --name ${CLUSTER_NAME}
 
                 # Delete applications namespaces
