--- a/pipeline/pipeline.yml
+++ b/pipeline/pipeline.yml
@@ -11,7 +11,7 @@ shared:
       type: registry-image
       source:
         repository: cycloid/cycloid-toolkit
-        tag: "((cycloid_toolkit_image))"
+        tag: "v8.3"
     run:
       path: /usr/bin/merge-stack-and-config
     outputs:
@@ -62,15 +62,15 @@ resources:
   type: terraform
   icon: terraform
   source:
-    env_name: ((env))
+    env_name: ($ .environment $)
     backend_type: http
     backend_config:
-      address: '($ api_url $)/inventory?jwt=($ inventory_jwt $)'
+      address: '($ .api_url $)/inventory?jwt=($ .inventory_jwt $)'
       skip_cert_verification: true
     vars:
-      env: ((env))
-      project: ((project))
-      organization: ((organization))
+      env: ($ .environment $)
+      project: ($ .project $)
+      organization: ($ .organization_canonical $)
       aws_region: ((aws_default_region))
       node_instance_type: ((node_instance_type))
       node_desired_size: ((node_desired_size))
@@ -83,14 +83,18 @@ resources:
       AWS_ACCESS_KEY_ID: ((aws_access_key))
       AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
 
-# The Terraform stack (will be merged with the config)
 - name: git_stack
-  icon: github-circle
   type: git
+  icon: github-circle
   source:
-    uri: ((stack_git_repository))
-    branch: ((stack_git_branch))
-    private_key: ((stack_git_private_key))
+    uri: ($ .scs_url $)
+    branch: ($ .scs_branch $)
+    ($- if eq .scs_cred_type "basic_auth" $)
+    username: ((($ .scs_cred_path $).username))
+    password: ((($ .scs_cred_path $).password))
+    ($- else $)
+    private_key: ((($ .scs_cred_path $).ssh_key))
+    ($- end $)
     paths:
       - terraform/aws-eks/*
 
@@ -99,11 +103,16 @@ resources:
   type: git
   icon: github-circle
   source:
-    uri: ((config_git_repository))
-    branch: ((config_git_branch))
-    private_key: ((config_git_private_key))
+    uri: ($ .cr_url $)
+    branch: ($ .cr_branch $)
+    ($- if eq .cr_cred_type "basic_auth" $)
+    username: ((($ .cr_cred_path $).username))
+    password: ((($ .cr_cred_path $).password))
+    ($- else $)
+    private_key: ((($ .cr_cred_path $).ssh_key))
+    ($- end $)
     paths:
-      - ((config_terraform_path))/*
+      - ($ .project $)/terraform/($ .environment $)/*
 
 jobs:
 
@@ -224,7 +233,7 @@ jobs:
           inputs:
           - name: tfstate
           params:
-            CLUSTER_NAME: ((project))-((env))
+            CLUSTER_NAME: ($ .project $)-($ .environment $)
             AWS_ACCESS_KEY_ID: ((aws_access_key))
             AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
             NODE_DESIRED_SIZE: ((node_desired_size))
@@ -258,7 +267,7 @@ jobs:
           inputs:
           - name: tfstate
           params:
-            CLUSTER_NAME: ((project))-((env))
+            CLUSTER_NAME: ($ .project $)-($ .environment $)
             AWS_ACCESS_KEY_ID: ((aws_access_key))
             AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
 
@@ -311,7 +320,7 @@ jobs:
 #           inputs:
 #           - name: tfstate
 #           params:
-#             CLUSTER_NAME: ((project))-((env))
+#             CLUSTER_NAME: ($ .project $)-($ .environment $)
 #             AWS_ACCESS_KEY_ID: ((aws_access_key))
 #             AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
 
@@ -369,7 +378,7 @@ jobs:
         inputs:
         - name: tfstate
         params:
-          INFRA_NAME: ((project))-((env))
+          INFRA_NAME: ($ .project $)-($ .environment $)
 
 - name: terraform-destroy
   serial: True
@@ -457,7 +466,7 @@ jobs:
             inputs:
             - name: tfstate
             params:
-              CLUSTER_NAME: ((project))-((env))
+              CLUSTER_NAME: ($ .project $)-($ .environment $)
               AWS_ACCESS_KEY_ID: ((aws_access_key))
               AWS_SECRET_ACCESS_KEY: ((aws_secret_key))
 
