--- a/terraform/aws-eks/main.tf.sample
+++ b/terraform/aws-eks/main.tf.sample
@@ -21,13 +21,7 @@ module "eks" {
     # more info https://docs.aws.amazon.com/eks/latest/userguide/managing-vpc-cni.html
     # If needed to update manually: https://docs.aws.amazon.com/en_us/eks/latest/userguide/managing-vpc-cni.html
     vpc-cni = {
-      configuration_values = jsonencode({
-        env = {
-          # Reference docs https://docs.aws.amazon.com/eks/latest/userguide/cni-increase-ip-addresses.html
-          ENABLE_PREFIX_DELEGATION = "true"
-          WARM_PREFIX_TARGET       = "1"
-        }
-      })
+      configuration_values = local.vpc_cni_config
     }
   }
 
