--- a/terraform/aws-eks/main.tf.sample
+++ b/terraform/aws-eks/main.tf.sample
@@ -1,9 +1,10 @@
 ################################################################################
 # EKS Module https://github.com/terraform-aws-modules/terraform-aws-eks
+# https://registry.terraform.io/modules/terraform-aws-modules/eks/aws/latest
 ################################################################################
 module "eks" {
   source  = "terraform-aws-modules/eks/aws"
-  version = "~> 20.11.1"
+  version = "~> 20.31.6"
 
   cluster_name    = "${var.project}-${var.env}"
   cluster_version = "1.29"
@@ -104,6 +105,9 @@ module "eks" {
   # https://github.com/terraform-aws-modules/terraform-aws-eks/tree/master/modules/aws-auth
   authentication_mode = "API_AND_CONFIG_MAP"
 
+  # Adds the current caller identity as an administrator via cluster access entry
+  enable_cluster_creator_admin_permissions = true
+
   # networking
   vpc_id     = module.vpc.vpc_id
   subnet_ids = local.subnet_ids_needed
@@ -149,11 +153,12 @@ module "eks" {
 
 ################################################################################
 # VPC Module https://github.com/terraform-aws-modules/terraform-aws-vpc
+# https://registry.terraform.io/modules/terraform-aws-modules/vpc/aws/latest
 ################################################################################
 
 module "vpc" {
   source  = "terraform-aws-modules/vpc/aws"
-  version = "~> 5.8.1"
+  version = "~> 5.17.0"
 
   name = "${var.project}-${var.env}"
 
@@ -168,6 +173,7 @@ module "vpc" {
 
   enable_nat_gateway   = true
   single_nat_gateway   = true
+  enable_vpn_gateway   = false
   enable_dns_hostnames = true
 
   # Logging VPC traffic
